--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prisma": "prisma"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "graphql-yoga": "^1.18.3",
     "jsonwebtoken": "^8.5.1",
